add styles for solutions

--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,37 @@
     "%autoreload 2\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7; border-radius: 5px; padding: 5px;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7; border-radius: 5px; padding: 5px;\n",
+    "}\n",
+    "</style>"
    ]
   },
   {
@@ -113,6 +144,15 @@
    "metadata": {},
    "source": [
     "Prove that $A \\subseteq A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "$\\forall x\\in A \\; x \\in A$ and $\\forall x \\notin A \\;x \\notin A$\n",
+    "</div>"
    ]
   },
   {
@@ -2227,7 +2267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
