--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"solution\">\n",
+    "<div style=\"border: 2px solid #00b8d7; border-radius: 5px; padding: 5px;\">\n",
     "$\\forall x\\in A \\; x \\in A$ and $\\forall x \\notin A \\;x \\notin A$\n",
     "</div>"
    ]
