add some proofs

--- a/linear_algebra-1.ipynb
+++ b/linear_algebra-1.ipynb
@@ -13,6 +13,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".solution {\n",
+       "    border: 2px solid #00b8d7;\n",
+       "    border-radius: 5px;\n",
+       "    padding: 5px 5px 5px 20px;\n",
+       "    position: relative;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       ".solution::before {\n",
+       "    content: \"\";\n",
+       "    position: absolute;\n",
+       "    left: 0;\n",
+       "    top: 0;\n",
+       "    transform: translate(-50%);\n",
+       "    border-radius: 100%;\n",
+       "    height: 100%;\n",
+       "    width: 26px;\n",
+       "    background: #00b8d7;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    ".solution {\n",
+    "    border: 2px solid #00b8d7;\n",
+    "    border-radius: 5px;\n",
+    "    padding: 5px 5px 5px 20px;\n",
+    "    position: relative;\n",
+    "    overflow: hidden;\n",
+    "}\n",
+    ".solution::before {\n",
+    "    content: \"\";\n",
+    "    position: absolute;\n",
+    "    left: 0;\n",
+    "    top: 0;\n",
+    "    transform: translate(-50%);\n",
+    "    border-radius: 100%;\n",
+    "    height: 100%;\n",
+    "    width: 26px;\n",
+    "    background: #00b8d7;\n",
+    "}\n",
+    "</style>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"border: 2px solid #00b8d7; border-radius: 5px; padding: 5px;\">\n",
+    "<div class=\"solution\">\n",
     "$\\forall x\\in A \\; x \\in A$ and $\\forall x \\notin A \\;x \\notin A$\n",
     "</div>"
    ]
@@ -136,6 +197,17 @@
    "metadata": {},
    "source": [
     "If $A \\subseteq B$ and $B \\subseteq A$ $\\to$ $A = B$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "If $A \\neq B,$ then $\\exists x \\in A \\; x \\notin B$ or $\\exists y \\in B \\; y \\notin A $<br />\n",
+    "but the there cannot exist such x since $A \\subseteq B$ and there cannot exist such y, since $B \\subseteq A$<br/>\n",
+    "Thus, $A = B$\n",
+    "</div>"
    ]
   },
   {
@@ -190,7 +262,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "let $C = A \\cap B$<br/>\n",
+    "from the definition, $C \\subseteq A$ and $C \\subseteq B$<br/>\n",
+    "Thus we have to prove that the statement $\\exists x \\in B \\; x \\notin C$ is false<br/>\n",
+    "Let's prove by contradiction. If there exists such x, $x \\in B$ and since $B \\subset A$, $x \\in A$. $x \\in B$ and $x \\in A \\to x \\in C$, which is a contradiction. thus $C = A\\cap B = B$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that $A \\cap B = B \\cap A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "$A \\cap B = \\{x | x\\in A \\; \\text{and}\\; x \\in B\\}$<br/>\n",
+    "on the other hand, $B \\cap A = \\{x | x\\in B \\; \\text{and}\\; x \\in A\\}$<br/>\n",
+    "Since $x\\in A \\; \\text{and}\\; x \\in B$ is equivalent to $x\\in B \\; \\text{and}\\; x \\in A, \\;$ $A \\cap B= B\\cap A$\n",
+    "</div>"
    ]
   },
   {
@@ -221,7 +316,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"solution\">\n",
+    "let $C = A \\cup B$<br/>\n",
+    "$A \\subseteq A \\cup B \\to A \\subseteq C$<br/>\n",
+    "Now we just have to show that $C \\subseteq A$<br/>\n",
+    "Let's prove by contradiction. if $C \\nsubseteq A, \\exists x \\in C \\; x \\notin A $<br/>\n",
+    "Thus $x \\in B$, since $x \\notin A$ and $x \\in A \\cup B$<br/>\n",
+    "However, sinc $B \\subset A$, above condition cannot be true. We came into contradiction. Therefore, $C = A \\cup B = A$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Prove that $A \\cup B = B \\cup A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"solution\">\n",
+    "$A \\cup B = \\{x | x\\in A \\; \\text{or}\\; x \\in B\\}$<br/>\n",
+    "on the other hand, $B \\cup A = \\{x | x\\in B \\; \\text{or}\\; x \\in A\\}$<br/>\n",
+    "Since $x\\in A \\; \\text{or}\\; x \\in B$ is equivalent to $x\\in B \\; \\text{or}\\; x \\in A, \\;$ $A \\cup B= B\\cup A$\n",
+    "</div>"
    ]
   },
   {
