--- a/linear_algebra-2.ipynb
+++ b/linear_algebra-2.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "I"
    ]
@@ -469,7 +483,7 @@
    "source": [
     "For any $A \\in \\mathbb{R}^{n \\times m} (\\mathbb{C}^{n \\times m})$ there exists decomposition:\n",
     "$$A = U \\Sigma V^{T}$$ \n",
-    "where $U \\in \\mathbb{R}^{n \\times n}(\\mathbb{C}^{n \\times n})$ is a square matrix, $\\Sigma \\in \\mathbb{R}^{n \\times m} (\\mathbb{C}^{n \\times m})$ is a diagonal matrix and  $V \\in \\mathbb{R}^{n \\times n} (\\mathbb{C}^{n \\times n})$ is also a square matrix\n",
+    "where $U \\in \\mathbb{R}^{m \\times m}(\\mathbb{C}^{m \\times m})$ is a square matrix, $\\Sigma \\in \\mathbb{R}^{n \\times m} (\\mathbb{C}^{n \\times m})$ is a diagonal matrix and  $V \\in \\mathbb{R}^{n \\times n} (\\mathbb{C}^{n \\times n})$ is also a square matrix\n",
     "#### Note: We only discuss real valued vectors, matrices and tensors in this course"
    ]
   },
@@ -503,9 +517,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1,  2,  3],\n",
+       "        [ 4,  5,  6],\n",
+       "        [ 7,  8,  9],\n",
+       "        [10, 11, 12]]), (4, 3))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]])\n",
     "A, A.shape"
@@ -513,9 +541,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.14087668,  0.82471435,  0.53358462,  0.12364244],\n",
+       "        [-0.34394629,  0.42626394, -0.8036038 ,  0.2328539 ],\n",
+       "        [-0.54701591,  0.02781353,  0.00645373, -0.83663514],\n",
+       "        [-0.75008553, -0.37063688,  0.26356544,  0.48013879]]),\n",
+       " array([2.54624074e+01, 1.29066168e+00, 1.38648772e-15]),\n",
+       " array([[-0.50453315, -0.5745157 , -0.64449826],\n",
+       "        [-0.76077568, -0.05714052,  0.64649464],\n",
+       "        [-0.40824829,  0.81649658, -0.40824829]]),\n",
+       " (4, 4),\n",
+       " (3,),\n",
+       " (3, 3))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "U, S, V_T = np.linalg.svd(A)\n",
     "U, S, V_T, U.shape, S.shape, V_T.shape"
@@ -523,9 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2.54624074e+01, 0.00000000e+00, 0.00000000e+00],\n",
+       "        [0.00000000e+00, 1.29066168e+00, 0.00000000e+00],\n",
+       "        [0.00000000e+00, 0.00000000e+00, 1.38648772e-15]]), (3, 3))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Sg = np.diag(S)\n",
     "Sg, Sg.shape"
@@ -533,9 +595,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.14087668  0.82471435  0.53358462  0.12364244]\n",
+      " [-0.34394629  0.42626394 -0.8036038   0.2328539 ]\n",
+      " [-0.54701591  0.02781353  0.00645373 -0.83663514]\n",
+      " [-0.75008553 -0.37063688  0.26356544  0.48013879]]\n",
+      "[ 0.82471435  0.42626394  0.02781353 -0.37063688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(U)\n",
+    "print(U[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25.495097567963924, -0.0, 1.0, 1.7320508075688772)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.norm(A), np.round(U[:, 0] @ U[:, 1].T), np.linalg.norm(U[2, :]), np.linalg.norm(V_T)"
    ]
@@ -764,7 +859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
